# Lang-Loc

./: .env.example  .gitignore  CONFIG.md  CONSOLIDATION_REPORT.md  DATA.md  INSTALL.md  README.md  REPRODUCE.md  download_subset.sh  index.html  pyproject.toml  render_scene.py  requirements.txt  sample_motif_index.json
app/: app.py
conf/: config.yaml
conf/graph/: default.yaml
conf/model/: default.yaml
conf/paths/: default.yaml
config/: 3RScan_partial.txt  3RScan_release_scans.txt  default.yaml
configs/: config.yaml
configs/baseline/: default.yaml
configs/dataset/: default.yaml
configs/dialogue/: default.yaml
configs/eval/: default.yaml  llm_answerer.yaml  view_iou.yaml
configs/localization/: 3rscan.yaml  default.yaml  scannet.yaml
configs/manifests/: scanscribe_cleaned.json
configs/paths/: default.yaml
manifests/: 3rscan_table4_subset_100.txt  3rscan_table5_full.txt  README.md  scannet_run2_10.txt  scannet_table4_first_100.txt
scripts/: Copy of clip.ipynb  __init__.py  aggregated_pixel_annotation.py  analyze_qualiclip.py  batch_iqa_analysis.py  download_subset.sh  install_langloc_env.sh  pose_objects.py  reproduce_paper_tables.sh  reproduce_paper_tables_1_2.sh  sample_scannet_images.py  scene_questionbot.py  setup_multiple_scenes.sh  setup_sample_data.sh  setup_vm.sh  tempCodeRunnerFile.py  tempCodeRunnerFile.sh  upgrade_to_cu128.sh  validate_canonical_v2.sh
src/: __init__.py  image_generator.py
src/ui/: sidebar.py  (+4 more)
static/: site.webmanifest
tools/: download_3rscan.py  sensor_data.py  sensor_reader.py
website/: scannet_annotation1.py
(+320 files in other folders)
