[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langloc"
version = "1.0.0"
description = "LangLoc: Tell Me What You See — fine-grained indoor localization from natural language"
requires-python = ">=3.10"
dependencies = [
    # Deep learning
    "torch>=2.0",
    "torch_geometric",
    "torch_scatter",
    "numpy",
    "scipy",
    "scikit-learn",
    # NLP / embeddings
    "spacy>=3.0",
    "transformers",
    "tiktoken",
    "openai>=1.30.0",
    # 3D geometry
    "open3d>=0.17.0",
    "plyfile>=0.7.5",
    # Configuration
    "hydra-core>=1.3",
    "omegaconf",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    # Visualization / data
    "matplotlib>=3.7",
    "tqdm>=4.64",
    "Pillow>=10.0",
    "pandas>=2.0",
    "networkx>=3.0",
    # Logging
    "wandb",
    # Image quality (dataset creation)
    "pyiqa>=0.1.12",
    "opencv-python>=4.8.0",
    "python-fcl>=0.7",
]

[project.optional-dependencies]
clip = ["clip @ git+https://github.com/openai/CLIP.git"]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
include = ["langloc*"]
